--- a/package.json
+++ b/package.json
@@ -34,12 +34,11 @@
     "react-plotly.js": "^2.2.0",
     "react-redux": "5.0.7",
     "react-responsive-modal": "^3.5.1",
-    "react-router": "^4.0.0",
     "react-router-dom": "^4.2.2",
     "react-spinners": "^0.4.7",
     "redux": "4.0.0",
     "redux-form": "^6.6.3",
-    "redux-promise": "^0.6.0",
-    "styled-components": "^4.1.2"
+    "redux-loop": "^4.5.2",
+    "redux-promise": "^0.6.0"
   }
 }
